--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-auth-library": "^10.4.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.546.0",
     "midtrans-client": "^1.4.3",
     "next": "15.5.4",
     "nodemailer": "^7.0.9",
